thumbnail links for service pages

--- a/index.html
+++ b/index.html
@@ -7,9 +7,47 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
 </head>
-<body class="sans-serif w-100 mw6 center mt4 mb4 dark-gray f6">
-  <div class="pa4">
-    <h2><b class="f3">inform</b> is a scientific illustration and animation studio.</h2>
-    <p>Under construction - check back soon for more details.
+<body class="sans-serif w-100 mw8 center mt4 mb4 dark-gray f6 bg-almost-white pa2">
+  <div class="">
+    <h1 class="tc-l tl"><b class="f2">inform</b> is a scientific illustration and animation studio.</h1>
+    <p class="tc">Under construction - check back soon for more details.</p>
+    <p class="tc mt5 f3">We specialize in:</p>
+    <div class="cf">
+      <div class="w-third-l w-50-ns w-100 fl pa2">
+        <div class="h5 relative shadow-3 grow pointer">
+          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Journal Covers</h4>
+        </div>
+      </div>
+      <div class="w-third-l w-50-ns w-100 fl pa2">
+        <div class="h5 relative shadow-3 grow pointer">
+          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Infographics</h4>
+        </div>
+      </div>
+      <div class="w-third-l w-50-ns w-100 fl pa2">
+        <div class="h5 relative shadow-3 grow pointer">
+          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Explanatory Animation</h4>
+        </div>
+      </div>
+      <div class="w-third-l w-50-ns w-100 fl pa2">
+        <div class="h5 relative shadow-3 grow pointer">
+          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Scientific Illustration</h4>
+        </div>
+      </div>
+      <div class="w-third-l w-50-ns w-100 fl pa2">
+        <div class="h5 relative shadow-3 grow pointer">
+          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Data Visualization</h4>
+        </div>
+      </div>
+      <div class="w-third-l w-50-ns w-100 fl pa2">
+        <div class="h5 relative shadow-3 grow pointer">
+          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Interaction Development</h4>
+        </div>
+      </div>
+    </div>
+    <p class="tc mt6 mb0 f2">Interested in working together?</p>
+    <p class="f5 tc"><a class="b no-underline dark-gray bb" href="#">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
+    <div class="bt b--gray mt6">
+      <p class="tc f7 gray">© 2018 Inform Studio</p>
+    </div>
   </div>
 </body>
