adjusted mobile page margins

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
 </head>
-<body class="sans-serif w-100 mw8 center mt4 mb4 dark-gray f6 bg-almost-white pa2">
+<body class="sans-serif w-100 mw8 center mt4-ns mb4-ns dark-gray f6 bg-almost-white pa2">
   <div class="">
     <h1 class="tc-l tl"><b class="f2">inform</b> is a scientific illustration and animation studio.</h1>
     <p class="tc">Under construction - check back soon for more details.</p>
