--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="sans-serif w-100 mw8 center mt4-ns mb4-ns dark-gray f6 bg-almost-white pa2">
   <div class="">
-    <h1 class="tc-l tl"><b class="f2">inform</b> is a scientific illustration and animation studio.</h1>
+    <p class="tc-l tl f2-ns f3"><b class="f1-ns f2 fw8">inform</b> is a scientific illustration and animation studio.</p>
     <p class="tc">Under construction - check back soon for more details.</p>
     <p class="tc mt5 f3">We specialize in:</p>
     <div class="cf">
@@ -44,7 +44,7 @@
         </div>
       </div>
     </div>
-    <p class="tc mt6 mb0 f2">Interested in working together?</p>
+    <p class="tc mt6 mb0 f2-ns f3">Interested in working together?</p>
     <p class="f5 tc"><a class="b no-underline dark-gray bb" href="#">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
     <div class="bt b--gray mt6">
       <p class="tc f7 gray">© 2018 Inform Studio</p>
