added email link

--- a/index.html
+++ b/index.html
@@ -10,42 +10,42 @@
 <body class="sans-serif w-100 mw8 center mt4-ns mb4-ns dark-gray f6 bg-almost-white pa2">
   <div class="">
     <p class="tc-l tl f2-ns f3"><b class="f1-ns f2 fw8">inform</b> is a scientific illustration and animation studio.</p>
-    <p class="tc">Under construction - check back soon for more details.</p>
-    <p class="tc mt5 f3">We specialize in:</p>
+    <p class="tc bg-yellow pa2">Under construction - check back soon for more details.</p>
+    <p class="tc mt5 f3-ns f4">We specialize in:</p>
     <div class="cf">
-      <div class="w-third-l w-50-ns w-100 fl pa2">
+      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
         <div class="h5 relative shadow-3 grow pointer">
           <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Journal Covers</h4>
         </div>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2">
+      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
         <div class="h5 relative shadow-3 grow pointer">
           <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Infographics</h4>
         </div>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2">
+      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
         <div class="h5 relative shadow-3 grow pointer">
           <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Explanatory Animation</h4>
         </div>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2">
+      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
         <div class="h5 relative shadow-3 grow pointer">
           <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Scientific Illustration</h4>
         </div>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2">
+      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
         <div class="h5 relative shadow-3 grow pointer">
           <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Data Visualization</h4>
         </div>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2">
+      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
         <div class="h5 relative shadow-3 grow pointer">
           <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Interaction Development</h4>
         </div>
       </div>
     </div>
     <p class="tc mt6 mb0 f2-ns f3">Interested in working together?</p>
-    <p class="f5 tc"><a class="b no-underline dark-gray bb" href="#">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
+    <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
     <div class="bt b--gray mt6">
       <p class="tc f7 gray">© 2018 Inform Studio</p>
     </div>
