added some thumbnails and adjusted grid layout

--- a/index.html
+++ b/index.html
@@ -6,47 +6,72 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
+  <style>
+    .bg-almost-white {
+      background-color: #fafafa;
+    }
+    .bg-almost-white-o {
+      background-color: rgba(250,250,250, 0.95)
+    }
+    .mw-image {
+      max-width: 24rem;
+    }
+  </style>
 </head>
 <body class="sans-serif w-100 mw8 center mt4-ns mb4-ns dark-gray f6 bg-almost-white pa2">
   <div class="">
-    <p class="tc-l tl f2-ns f3"><b class="f1-ns f2 fw8">inform</b> is a scientific illustration and animation studio.</p>
-    <p class="tc bg-yellow pa2">Under construction - check back soon for more details.</p>
-    <p class="tc mt5 f3-ns f4">We specialize in:</p>
-    <div class="cf">
-      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
-        <div class="h5 relative shadow-3 grow pointer">
-          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Journal Covers</h4>
-        </div>
+    <p class="tc-l tl f2-ns f3 mw8-l mw7 center pl2-ns pr2-ns"><b class="f1-ns f2 fw8">inform</b> is a scientific illustration and animation studio.</p>
+    <p class="tc mt6-ns mt5 f3-ns f4">We specialize in:</p>
+    <div class="cf mw8-l mw7 center">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
+        <a href="journal-covers.html" class="dark-gray">
+          <div class="relative shadow-3 grow pointer">
+            <img src="images/cover-thumb.jpg" class="w-100 db">
+            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray ma0"><h4 class="tc pa3 ma0 f4-l f5">Journal Covers</h4></div>
+          </div>
+        </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
-        <div class="h5 relative shadow-3 grow pointer">
-          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Infographics</h4>
-        </div>
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
+        <a href="infographics.html" class="dark-gray">
+          <div class="relative shadow-3 grow pointer">
+            <img src="images/prospect-diagram.jpg" class="w-100 db">
+            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Infographics</h4></div>
+          </div>
+        </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
-        <div class="h5 relative shadow-3 grow pointer">
-          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Explanatory Animation</h4>
-        </div>
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
+        <a href="scientific-illustration.html" class="dark-gray">
+          <div class="relative shadow-3 grow pointer">
+            <img src="images/parafermions.jpg" class="w-100 db">
+            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Scientific Illustration</h4></div>
+          </div>
+        </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
-        <div class="h5 relative shadow-3 grow pointer">
-          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Scientific Illustration</h4>
-        </div>
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
+        <a href="explanatory-animation.html" class="dark-gray">
+          <div class="h5 relative shadow-3 grow pointer">
+            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Explanatory Animation</h4></div>
+          </div>
+        </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
-        <div class="h5 relative shadow-3 grow pointer">
-          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Data Visualization</h4>
-        </div>
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
+        <a href="data-visualization.html" class="dark-gray">
+          <div class="h5 relative shadow-3 grow pointer">
+            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Data Visualization</h4></div>
+          </div>
+        </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 fl pa2-ns">
-        <div class="h5 relative shadow-3 grow pointer">
-          <h4 class="tc pa3 ma0 absolute w-100 bottom-0 bg-almost-white bt b--moon-gray">Interaction Development</h4>
-        </div>
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
+        <a href="interaction-development.html" class="dark-gray">
+          <div class="h5 relative shadow-3 grow pointer">
+            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Interaction Development</h4></div>
+          </div>
+        </a>
       </div>
     </div>
-    <p class="tc mt6 mb0 f2-ns f3">Interested in working together?</p>
+    <p class="tc mt6-ns mt5 mb0 f2-ns f3">Interested in working together?</p>
     <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
-    <div class="bt b--gray mt6">
+    <div class="bt b--gray mt6-ns mt5 mw6-ns center">
       <p class="tc f7 gray">© 2018 Inform Studio</p>
     </div>
   </div>
