re-added under construction banner

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body class="sans-serif w-100 mw8 center mt4-ns mb4-ns dark-gray f6 bg-almost-white pa2">
   <div class="">
     <p class="tc-l tl f2-ns f3 mw8-l mw7 center pl2-ns pr2-ns"><b class="f1-ns f2 fw8">inform</b> is a scientific illustration and animation studio.</p>
+    <p class="tc bg-yellow pa2">Under construction - check back soon for more details.</p>
     <p class="tc mt6-ns mt5 f3-ns f4">We specialize in:</p>
     <div class="cf mw8-l mw7 center">
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
