added new images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p class="tc bg-yellow pa2">Under construction - check back soon for more details.</p>
     <p class="tc mt6-ns mt5 f3-ns f4">We specialize in:</p>
     <div class="cf mw8-l mw7 center">
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2-ns pb2">
         <a href="journal-covers.html" class="dark-gray">
           <div class="relative shadow-3 grow pointer">
             <img src="images/cover-thumb.jpg" class="w-100 db">
@@ -50,21 +50,24 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
         <a href="explanatory-animation.html" class="dark-gray">
-          <div class="h5 relative shadow-3 grow pointer">
+          <div class="relative shadow-3 grow pointer">
+            <img src="images/moebius.gif" class="w-100 db">
             <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Explanatory Animation</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
         <a href="data-visualization.html" class="dark-gray">
-          <div class="h5 relative shadow-3 grow pointer">
+          <div class="relative shadow-3 grow pointer">
+            <img src="images/dots.jpg" class="w-100 db">
             <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Data Visualization</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa2-ns">
         <a href="interaction-development.html" class="dark-gray">
-          <div class="h5 relative shadow-3 grow pointer">
+          <div class="relative shadow-3 grow pointer">
+            <img src="images/test.gif" class="w-100 db">
             <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Interaction Development</h4></div>
           </div>
         </a>
