--- a/journal-covers.html
+++ b/journal-covers.html
@@ -10,7 +10,8 @@
 <body class="sans-serif w-100 mw8 center mt4-ns mb4-ns dark-gray f6 bg-almost-white pa2">
   <div class="">
     <a href="index.html" class="no-underline dark-gray"><p class="tl f4-ns f5 mt0 bb b--gray"><b class="fw8">inform</b>studio</p></a>
-    <p class="tc f2-ns f3">Journal Covers</p>
-    <p class="tc bg-yellow pa2">Under construction - check back soon for more details.</p>
+      <p class="tc f2-ns f3 pt4">Want to showcase your work?</p>
+      <h1 class="tc f4-ns f5">We've got you covered.</h1>
+    <p class="tc bg-yellow pa2 mt5">Under construction - check back soon for more details.</p>
   </div>
 </body>
