added lots of stuff

--- a/journal-covers.html
+++ b/journal-covers.html
@@ -7,11 +7,75 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
 </head>
-<body class="sans-serif w-100 mw8 center mt4-ns mb4-ns dark-gray f6 bg-almost-white pa2">
-  <div class="">
-    <a href="index.html" class="no-underline dark-gray"><p class="tl f4-ns f5 mt0 bb b--gray"><b class="fw8">inform</b>studio</p></a>
-      <p class="tc f2-ns f3 pt4">Want to showcase your work?</p>
-      <h1 class="tc f4-ns f5">We've got you covered.</h1>
-    <p class="tc bg-yellow pa2 mt5">Under construction - check back soon for more details.</p>
+<body class="sans-serif w-100 center black-70 f6 bg-white pa2">
+  <!-- was mt4-ns mb4-ns -->
+  <header class="w-100 bb b--moon-gray">
+    <a href="index.html" class="no-underline black-70"><p class="tl f4-ns f5 mt0 mb2 mw8 center"><b class="fw8">inform</b>studio</p></a>
+  </header>
+  <div class="mw8 w-100 center">
+    <p class="tc bg-yellow absolute">Under construction - check back soon for more details.</p>
+    <p class="tc f2-ns f3 pt4 mb3 dark-gray">Want to showcase your research?</p>
+    <h1 class="tc f3-ns f4">We've got you covered.</h1>
+    <p class="f4-ns f5 mw6 center mt5 lh-copy">Not only will a cover illustration be super awesome and totally great, but a nice illustration can also be used for posters, lab sites, promotional materials, whatever.</p>
+    <p class="tc f3-ns f4 mt5">How it works:</p>
+    <div class="dt-ns w-100 mt4">
+      <div class="w-50-ns dtc-ns v-mid">
+        <div class="pl4 pr4 tc">
+          <div class="w-20-l w-100">
+            <div class="br-100 ba h3 tc w3 shadow-3 fl-l center">
+              <p class="dib v-mid f2 mt2 pt1">1</p>
+            </div>
+          </div>
+          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">You send us a copy of the paper and any ideas* you have for illustration.<span class="f7"><br><br>*Written description, photos, hastily scribbled napkin sketches</span></p>
+        </div>
+      </div>
+      <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
+    </div>
+    <div class="dt-ns w-100 mt4">
+      <div class="w-50-ns dtc-ns v-mid">
+        <div class="pl4 pr4 tc">
+          <div class="w-20-l w-100">
+            <div class="br-100 ba h3 tc w3 shadow-3 fl-l center">
+              <p class="dib v-mid f2 mt2 pt1">2</p>
+            </div>
+          </div>
+          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We'll produce a number of sketches, ideas for where to start. </p>
+        </div>
+      </div>
+      <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
+    </div>
+    <div class="dt-ns w-100 mt4">
+      <div class="w-50-ns dtc-ns v-mid">
+        <div class="pl4 pr4 tc">
+          <div class="w-20-l w-100">
+            <div class="br-100 ba h3 tc w3 shadow-3 fl-l center">
+              <p class="dib v-mid f2 mt2 pt1">3</p>
+            </div>
+          </div>
+          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We'll work with you to refine your ideas, iterating through multiple drafts.</p>
+        </div>
+      </div>
+      <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
+    </div>
+    <div class="dt-ns w-100 mt4">
+      <div class="w-50-ns dtc-ns v-mid">
+        <div class="pl4 pr4 tc">
+          <div class="w-20-l w-100">
+            <div class="br-100 ba h3 tc w3 shadow-3 fl-l center">
+              <p class="dib v-mid f2 mt2 pt1">4</p>
+            </div>
+          </div>
+          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">When you're satisfied, we'll produce a high-resolution render, ready for publication.</p>
+        </div>
+      </div>
+      <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
+    </div>
+    <p class="tc mt6-ns mt5 mb0 f2-ns f3 dark-gray">Ready to get started?</p>
+    <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Contact us<span><img src="mail.svg" class="w2 ml1"></span></a> for a consultation.</p>
+  </div>
+  <div>
+    <div class="bt b--moon-gray mt6-ns mt5 center">
+      <p class="tc f7 gray mt3">© 2018 Inform Studio</p>
+    </div>
   </div>
 </body>
