--- a/index-new.html
+++ b/index-new.html
@@ -32,10 +32,10 @@
 <body class="sans-serif w-100 center black-70 f6 bg-almost-white pa2 relative">
   <div class="relative tc w-100 mw5 center"><p class="tc bg-yellow absolute pa2">Under construction - check back soon for more details.</p></div>
   <div class="mw9-l mw8-m center pl4-l pr4-l mt5-ns">
-    <p class="tc-l tl f1-l f2-m f3 mw9-l mw7 center pl2-ns pr2-ns pb4-ns dark-gray"><b class="f-inform-l f1-m f2 fw8 black">inform</b> is a scientific illustration and animation studio.</p>
+    <p class="tc-l tl f1-l f2-m f3 mw9-l mw7 center pl2-ns pr2-ns pb4-ns dark-gray pl3 pr3"><b class="f-inform-l f1-m f2 fw8 black">inform</b> is a scientific illustration and animation studio.</p>
     <!-- <p class="tc mt5-ns mt5 f3-ns f4">We specialize in:</p> -->
     <div class="cf grid-l mw7 center pb4">
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="journal-covers.html" class="dark-gray">
           <div class="relative shadow-3 grow pointer">
             <img src="images/cover-thumb.jpg" class="w-100 db">
@@ -43,7 +43,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="infographics.html" class="dark-gray">
           <div class="relative shadow-3 grow pointer">
             <img src="images/prospect-diagram.jpg" class="w-100 db">
@@ -51,7 +51,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="scientific-illustration.html" class="dark-gray">
           <div class="relative shadow-3 grow pointer">
             <img src="images/parafermions.jpg" class="w-100 db">
@@ -59,7 +59,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pb2 pa3-l pa2-m">
         <a href="explanatory-animation.html" class="dark-gray">
           <div class="relative shadow-3 grow pointer">
             <img src="images/moebius.gif" class="w-100 db">
@@ -67,7 +67,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="data-visualization.html" class="dark-gray">
           <div class="relative shadow-3 grow pointer">
             <img src="images/dots.jpg" class="w-100 db">
@@ -75,7 +75,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="interaction-development.html" class="dark-gray">
           <div class="relative shadow-3 grow pointer">
             <img src="images/test.gif" class="w-100 db">
@@ -85,7 +85,7 @@
       </div>
     </div>
     <p class="tc mt5-ns mt4 mb0 f2-ns f3 dark-gray">Interested in working together?</p>
-    <p class="f4 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
+    <p class="f4-ns f5 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
   </div>
   <div class="mt4 mt5-ns">
     <div class="center mw4 mb2 pl2 pr2 pb4 mb4 w-100">
