--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     .mw-image {
       max-width: 34rem;
     }
+    .image-container {
+      padding-bottom:100%;
+      height:0;
+      position:relative;
+    }
+    .thumb-image {
+      width:100%;
+      height:100%;
+      display:block;
+      position:absolute;
+    }
     @media screen and (min-width: 60em) {
       .f-inform-l {
         font-size: 4rem;
@@ -37,48 +48,48 @@
     <div class="cf grid-l mw7 center pb4">
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="journal-covers.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer">
-            <img src="images/cover-thumb.jpg" class="w-100 db">
+          <div class="relative shadow-3 grow pointer image-container image-container">
+            <img src="images/cover-thumb.jpg" class="thumb-image">
             <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray ma0"><h4 class="tc pa3 ma0 f4-l f5">Journal Covers</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="infographics.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer">
-            <img src="images/prospect-diagram.jpg" class="w-100 db">
+          <div class="relative shadow-3 grow pointer image-container">
+            <img src="images/prospect-diagram.jpg" class="thumb-image">
             <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Infographics</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="scientific-illustration.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer">
-            <img src="images/parafermions.jpg" class="w-100 db">
+          <div class="relative shadow-3 grow pointer image-container">
+            <img src="images/parafermions.jpg" class="thumb-image">
             <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Scientific Illustration</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pb2 pa3-l pa2-m">
         <a href="explanatory-animation.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer">
-            <img src="images/moebius.gif" class="w-100 db">
+          <div class="relative shadow-3 grow pointer image-container">
+            <img src="images/moebius.gif" class="thumb-image">
             <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Explanatory Animation</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="data-visualization.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer">
-            <img src="images/dots.jpg" class="w-100 db">
+          <div class="relative shadow-3 grow pointer image-container">
+            <img src="images/dots.jpg" class="thumb-image">
             <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Data Visualization</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="interaction-development.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer">
-            <img src="images/test.gif" class="w-100 db">
+          <div class="relative shadow-3 grow pointer image-container">
+            <img src="images/test.gif" class="thumb-image">
             <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Interaction Development</h4></div>
           </div>
         </a>
