small layout adjustments

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
   </div>
   <div class="mt4 mt5-ns">
     <div class="center mw4 mb2 pl2 pr2 pb4 mb4 w-100">
-      <div class="w-50 pa2 dim fl"><a href="#" class="o-70"><img src="images/logos/twitter.svg"></a></div>
-      <div class="w-50 pa2 dim fl"><a href="#" class="o-70"><img src="images/logos/instagram_simple_icon.svg"></a></div>
+      <div class="w-50 pa2 dim fl"><a href="https://twitter.com/inform_studio" class="o-70"><img src="images/logos/twitter.svg"></a></div>
+      <div class="w-50 pa2 dim fl"><a href="https://www.instagram.com/inform_science_studio/" class="o-70"><img src="images/logos/instagram_simple_icon.svg"></a></div>
     </div>
     <div class="center mw6-l">
       <p class="tc f7 gray mt3">© 2018 Inform Studio</p>
