--- a/journal-covers.html
+++ b/journal-covers.html
@@ -7,12 +7,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
 </head>
-<body class="sans-serif w-100 center black-70 f6 bg-white pa2">
+<body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
   <!-- was mt4-ns mb4-ns -->
   <header class="w-100 bb b--moon-gray">
-    <a href="index.html" class="no-underline black-70"><p class="tl f4-ns f5 mt0 mb2 mw8 center"><b class="fw8">inform</b>studio</p></a>
+    <a href="index.html" class="no-underline black-70"><p class="tl f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <div class="mw8 w-100 center">
+  <div class="mw8 w-100 center pl2 pr2">
     <p class="tc bg-yellow absolute">Under construction - check back soon for more details.</p>
     <p class="tc f2-ns f3 pt4 mb3 dark-gray">Want to showcase your research?</p>
     <h1 class="tc f3-ns f4">We've got you covered.</h1>
@@ -75,7 +75,7 @@
   </div>
   <div>
     <div class="bt b--moon-gray mt6-ns mt5 center">
-      <p class="tc f7 gray mt3">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
     </div>
   </div>
 </body>
