--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-almost-white pa2 relative">
-  <div class="relative tc w-100 mw5 center"><p class="tc bg-yellow absolute pa2">Under construction - check back soon for more details.</p></div>
+  <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
   <div class="mw9-l mw8-m center pl4-l pr4-l mt5-ns">
     <p class="tc-l tl f1-l f2-m f3 mw9-l mw7 center pl2-ns pr2-ns pb4-ns dark-gray pl3 pr3"><b class="f-inform-l f1-m f2 fw8 black">inform</b> is a scientific illustration and animation studio.</p>
     <!-- <p class="tc mt5-ns mt5 f3-ns f4">We specialize in:</p> -->
