--- a/infographics.html
+++ b/infographics.html
@@ -7,10 +7,19 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
 </head>
-<body class="sans-serif w-100 mw8 center mt4-ns mb4-ns dark-gray f6 bg-almost-white pa2">
-  <div class="">
-    <a href="index.html" class="no-underline dark-gray"><p class="tl f4-ns f5 mt0 bb b--gray"><b class="fw8">inform</b>studio</p></a>
-    <p class="tc f2-ns f3">Infographics</p>
-    <p class="tc bg-yellow pa2">Under construction - check back soon for more details.</p>
+<body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
+  <header class="w-100 bb b--moon-gray">
+    <a href="index.html" class="no-underline black-70"><p class="tl f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
+  </header>
+  <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
+  <div class="mw8 w-100 center pl2 pr2">
+    <p class="tc f2-ns f3 pt4 mb3 dark-gray">Infographics</p>
+    <h1 class="tc f3-ns f4">Some other text here</h1>
+    <p class="f4-ns f5 mw6 center mt5 lh-copy">This is where a brief description will go, describing the services offered and giving examples of past work.</p>
+  </div>
+  <div>
+    <div class="bt b--moon-gray mt6-ns mt5 center">
+      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
+    </div>
   </div>
 </body>
