--- a/journal-covers.html
+++ b/journal-covers.html
@@ -8,15 +8,14 @@
   <link rel="stylesheet" href="tachyons.min.css">
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
-  <!-- was mt4-ns mb4-ns -->
   <header class="w-100 bb b--moon-gray">
     <a href="index.html" class="no-underline black-70"><p class="tl f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
+  <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
   <div class="mw8 w-100 center pl2 pr2">
-    <p class="tc bg-yellow absolute">Under construction - check back soon for more details.</p>
     <p class="tc f2-ns f3 pt4 mb3 dark-gray">Want to showcase your research?</p>
     <h1 class="tc f3-ns f4">We've got you covered.</h1>
-    <p class="f4-ns f5 mw6 center mt5 lh-copy">Not only will a cover illustration be super awesome and totally great, but a nice illustration can also be used for posters, lab sites, promotional materials, whatever.</p>
+    <p class="f4-ns f5 mw6 center mt5 lh-copy">Not only can a cover illustration be super awesome and totally great, but a nice illustration can also be used for posters, lab sites, promotional materials, whatever.</p>
     <p class="tc f3-ns f4 mt5">How it works:</p>
     <div class="dt-ns w-100 mt4">
       <div class="w-50-ns dtc-ns v-mid">
@@ -26,7 +25,7 @@
               <p class="dib v-mid f2 mt2 pt1">1</p>
             </div>
           </div>
-          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">You send us a copy of the paper and any ideas* you have for illustration.<span class="f7"><br><br>*Written description, photos, hastily scribbled napkin sketches</span></p>
+          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">You send us a copy of the paper and any ideas* you have for illustration.<span class="f7 db" style="line-height: 1.25 !important;"><br><br>*Written description, photos, hastily scribbled napkin sketches</span></p>
         </div>
       </div>
       <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
@@ -39,7 +38,7 @@
               <p class="dib v-mid f2 mt2 pt1">2</p>
             </div>
           </div>
-          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We'll produce a number of sketches, ideas for where to start. </p>
+          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We produce a number of sketches from your description, ideas for where to start. </p>
         </div>
       </div>
       <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
@@ -52,7 +51,7 @@
               <p class="dib v-mid f2 mt2 pt1">3</p>
             </div>
           </div>
-          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We'll work with you to refine your ideas, iterating through multiple drafts.</p>
+          <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We work with you to refine the illustration, iterating through multiple drafts.</p>
         </div>
       </div>
       <div class="w-50-ns w-100 dtc-ns h5 ba"></div>
