changed placeholder layout for service pages

--- a/journal-covers.html
+++ b/journal-covers.html
@@ -15,7 +15,7 @@
   <div class="mw8 w-100 center pl2 pr2">
     <p class="tc f2-ns f3 pt4 mb3 dark-gray">Want to showcase your research?</p>
     <h1 class="tc f3-ns f4">We've got you covered.</h1>
-    <p class="f4-ns f5 mw6 center mt5 lh-copy">Not only can a cover illustration be super awesome and totally great, but a nice illustration can also be used for posters, lab sites, promotional materials, whatever.</p>
+    <p class="f4-ns f5 mw6 center mt5 lh-copy">Not only will a custom cover illustration be great, but a nice illustration can also be used for posters, lab sites, promotional materials, whatever.</p>
     <p class="tc f3-ns f4 mt5">How it works:</p>
     <div class="dt-ns w-100 mt4">
       <div class="w-50-ns dtc-ns v-mid">
