test of logo layout

--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -13,8 +13,8 @@
   </header>
   <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
   <div class="mw8 w-100 center pl2 pr2">
-    <p class="tc f2-ns f3 pt4 mb3 dark-gray">Explanatory Animation</p>
-    <h1 class="tc f3-ns f4">Some other text here</h1>
+    <p class="tc f2-ns f3 pt4 mb3 dark-gray">If a picture is worth a thousand words...</p>
+    <h1 class="tc f3-ns f4">...an animation may save a few more.</h1>
     <p class="f4-ns f5 mw6 center mt5 lh-copy">This is where a brief description will go, describing the services offered and giving examples of past work.</p>
   </div>
   <div>
