--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="tachyons.min.css">
   <style>
     .bg-almost-white {
-      background-color: #fafafa;
+      background-color: #ffffff;
     }
     .bg-almost-white-o {
       background-color: rgba(250,250,250, 0.95)
@@ -27,10 +27,12 @@
       display:block;
       position:absolute;
     }
-    @media screen and (min-width: 60em) {
-      .f-inform-l {
+    @media screen and (min-width: 30em) and (max-width: 60em) {
+      .f-inform-m {
         font-size: 4rem;
       }
+    }
+    @media screen and (min-width: 60em) {
       .grid-l {
         max-width: 76rem;
       }
@@ -41,14 +43,17 @@
   </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-almost-white pa2 relative">
-  <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
-  <div class="mw9-l mw8-m center pl4-l pr4-l mt5-ns">
-    <p class="tc-l tl f1-l f2-m f3 mw9-l mw7 center pl2-ns pr2-ns pb4-ns dark-gray pl3 pr3"><b class="f-inform-l f1-m f2 fw8 black">inform</b> is a scientific illustration and animation studio.</p>
+  <div class="mw9-l mw8-m center pl4-l pr4-l mt0-ns">
+    <!-- originally mt5-ns -->
+    <div class="center mw6-ns pa0-l pl5-m pr5-m pr5 pl5"><img src="images/logo-test.png" class="w-100"></div>
+    <!-- <p class="f-headline-l f-inform-m f2 fw8 black tc ma0"><b>inform</b></p> -->
+    <p class="tc f1-l f2-m f3 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3">Scientific illustration and animation studio.</p>
     <!-- <p class="tc mt5-ns mt5 f3-ns f4">We specialize in:</p> -->
-    <div class="cf grid-l mw7 center pb4">
+    <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100 ma0">Under construction - check back soon for more details.</p></div>
+    <div class="cf grid-l mw7 center pb4 pt4-ns">
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
-        <a href="journal-covers.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer image-container image-container">
+          <div class="relative ba b--dark-gray grow pointer image-container image-container"><!-- originally no border shadow-3 -->
+            <a href="journal-covers.html" class="dark-gray">
             <img src="images/cover-thumb.jpg" class="thumb-image">
             <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray ma0"><h4 class="tc pa3 ma0 f4-l f5">Journal Covers</h4></div>
           </div>
@@ -56,41 +61,41 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="infographics.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer image-container">
+          <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/prospect-diagram.jpg" class="thumb-image">
-            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Infographics</h4></div>
+            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Infographics</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="scientific-illustration.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer image-container">
+          <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/parafermions.jpg" class="thumb-image">
-            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Scientific Illustration</h4></div>
+            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Scientific Illustration</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pb2 pa3-l pa2-m">
         <a href="explanatory-animation.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer image-container">
+          <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/moebius.gif" class="thumb-image">
-            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Explanatory Animation</h4></div>
+            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Explanatory Animation</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="data-visualization.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer image-container">
+          <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/dots.jpg" class="thumb-image">
-            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Data Visualization</h4></div>
+            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Data Visualization</h4></div>
           </div>
         </a>
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="interaction-development.html" class="dark-gray">
-          <div class="relative shadow-3 grow pointer image-container">
+          <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/test.gif" class="thumb-image">
-            <div class="bg-almost-white  absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Interaction Development</h4></div>
+            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray pa1"><h4 class="tc pa3 ma0 f4-l f5">Interaction Development</h4></div>
           </div>
         </a>
       </div>
