modified social icons

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       display:block;
       position:absolute;
     }
+    @media screen and (min-width: 30em) {
+      .copyright {
+        margin-bottom: 1.2rem !important;
+      }
+    }
     @media screen and (min-width: 30em) and (max-width: 60em) {
       .f-inform-m {
         font-size: 4rem;
@@ -104,7 +109,7 @@
     <p class="f4-ns f5 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
   </div>
   <div class="mt4 mt5-ns">
-    <div class="center mw4 mb2 pl2 pr2 pb4 w-100" style="margin-bottom: 1.2rem">
+    <div class="center mw4 mb2 pl2 pr2 pb4 copyright w-100" style="margin-bottom: 1.6rem;">
       <div class="w-50 pa2 pl3 dim fl"><a href="https://twitter.com/inform_studio" class="o-70"><img src="images/logos/twitter.svg"></a></div>
       <div class="w-50 pa2 pr3 dim fl"><a href="https://www.instagram.com/inform_science_studio/" class="o-70"><img src="images/logos/instagram_simple_icon.svg"></a></div>
     </div>
