--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       background-color: #ffffff;
     }
     .bg-almost-white-o {
-      background-color: rgba(250,250,250, 0.95)
+      background-color: rgba(255,255,255, 0.95)
     }
     .mw-image {
       max-width: 34rem;
@@ -52,7 +52,7 @@
     <!-- originally mt5-ns -->
     <div class="center mw6-ns pa0-l pl5-m pr5-m pr5 pl5"><img src="images/logo-test.png" class="w-100"></div>
     <!-- <p class="f-headline-l f-inform-m f2 fw8 black tc ma0"><b>inform</b></p> -->
-    <p class="tc f1-l f2-m f3 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3">Scientific illustration and animation studio.</p>
+    <p class="tc f1-l f2-m f3 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3">Scientific illustration and animation studio</p>
     <!-- <p class="tc mt5-ns mt5 f3-ns f4">We specialize in:</p> -->
     <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100 ma0">Under construction - check back soon for more details.</p></div>
     <div class="cf grid-l mw7 center pb4 pt4-ns">
