--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.min.css">
   <style>
-    .bg-almost-white {
-      background-color: #ffffff;
-    }
-    .bg-almost-white-o {
-      background-color: rgba(255,255,255, 0.95)
-    }
     .mw-image {
       max-width: 34rem;
     }
@@ -45,7 +39,7 @@
     }
   </style>
 </head>
-<body class="sans-serif w-100 center black-70 f6 bg-almost-white pa2 relative">
+<body class="sans-serif w-100 center black-70 f6 bg-white pa2 relative">
   <div class="mw9-l mw8-m center pl4-l pr4-l mt0-ns">
     <!-- originally mt5-ns -->
     <div class="center mw6-ns pa0-l pl5-m pr5-m pr5 pl5"><img src="images/logo-test.png" class="w-100"></div>
@@ -58,7 +52,7 @@
           <div class="relative ba b--dark-gray grow pointer image-container image-container"><!-- originally no border shadow-3 -->
             <a href="journal-covers.html" class="dark-gray">
             <img src="images/cover-thumb.jpg" class="thumb-image">
-            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray ma0"><h4 class="tc pa3 ma0 f4-l f5">Journal Covers</h4></div>
+            <div class="bg-white absolute w-100 bottom-0  bt b--moon-gray ma0"><h4 class="tc pa3 ma0 f4-l f5">Journal Covers</h4></div>
           </div>
         </a>
       </div>
@@ -66,7 +60,7 @@
         <a href="infographics.html" class="dark-gray">
           <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/prospect-diagram.jpg" class="thumb-image">
-            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Infographics</h4></div>
+            <div class="bg-white absolute w-100 bottom-0  bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Infographics</h4></div>
           </div>
         </a>
       </div>
@@ -74,7 +68,7 @@
         <a href="scientific-illustration.html" class="dark-gray">
           <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/parafermions.jpg" class="thumb-image">
-            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Scientific Illustration</h4></div>
+            <div class="bg-white absolute w-100 bottom-0  bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Scientific Illustration</h4></div>
           </div>
         </a>
       </div>
@@ -82,7 +76,7 @@
         <a href="explanatory-animation.html" class="dark-gray">
           <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/moebius.gif" class="thumb-image">
-            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Explanatory Animation</h4></div>
+            <div class="bg-white absolute w-100 bottom-0 bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Explanatory Animation</h4></div>
           </div>
         </a>
       </div>
@@ -90,7 +84,7 @@
         <a href="data-visualization.html" class="dark-gray">
           <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/dots.jpg" class="thumb-image">
-            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Data Visualization</h4></div>
+            <div class="bg-white absolute w-100 bottom-0  bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Data Visualization</h4></div>
           </div>
         </a>
       </div>
@@ -98,7 +92,7 @@
         <a href="interaction-development.html" class="dark-gray">
           <div class="relative ba b--dark-gray grow pointer image-container">
             <img src="images/test.gif" class="thumb-image">
-            <div class="bg-almost-white absolute w-100 bottom-0 bg-almost-white-o bt b--moon-gray pa1"><h4 class="tc pa3 ma0 f4-l f5">Interaction Development</h4></div>
+            <div class="bg-white absolute w-100 bottom-0  bt b--moon-gray pa1"><h4 class="tc pa3 ma0 f4-l f5">Interaction Development</h4></div>
           </div>
         </a>
       </div>
