--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100 ma0">Under construction - check back soon for more details.</p></div>
     <div class="cf grid-l mw7 center pb4 pt4-ns">
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
-          <div class="relative ba b--gray grow pointer image-container image-container"><!-- originally no border shadow-3 -->
+          <div class="relative ba b--gray grow pointer image-container br3 overflow-hidden"><!-- originally no border shadow-3 -->
             <a href="journal-covers.html" class="dark-gray">
             <img src="images/cover-thumb.jpg" class="thumb-image">
             <div class="bg-white absolute w-100 bottom-0 bt b--moon-gray ma0"><h4 class="tc pa3 ma0 f4-l f5">Journal Covers</h4></div>
@@ -58,7 +58,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="infographics.html" class="dark-gray">
-          <div class="relative ba b--gray grow pointer image-container">
+          <div class="relative ba b--gray grow pointer image-container br3 overflow-hidden">
             <img src="images/prospect-diagram.jpg" class="thumb-image">
             <div class="bg-white absolute w-100 bottom-0  bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Infographics</h4></div>
           </div>
@@ -66,7 +66,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="scientific-illustration.html" class="dark-gray">
-          <div class="relative ba b--gray grow pointer image-container">
+          <div class="relative ba b--gray grow pointer image-container br3 overflow-hidden">
             <img src="images/parafermions.jpg" class="thumb-image">
             <div class="bg-white absolute w-100 bottom-0  bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Scientific Illustration</h4></div>
           </div>
@@ -74,7 +74,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pb2 pa3-l pa2-m">
         <a href="explanatory-animation.html" class="dark-gray">
-          <div class="relative ba b--gray grow pointer image-container">
+          <div class="relative ba b--gray grow pointer image-container br3 overflow-hidden">
             <img src="images/moebius.gif" class="thumb-image">
             <div class="bg-white absolute w-100 bottom-0 bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Explanatory Animation</h4></div>
           </div>
@@ -82,7 +82,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="data-visualization.html" class="dark-gray">
-          <div class="relative ba b--gray grow pointer image-container">
+          <div class="relative ba b--gray grow pointer image-container br3 overflow-hidden">
             <img src="images/dots.jpg" class="thumb-image">
             <div class="bg-white absolute w-100 bottom-0  bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Data Visualization</h4></div>
           </div>
@@ -90,7 +90,7 @@
       </div>
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="interaction-development.html" class="dark-gray">
-          <div class="relative ba b--gray grow pointer image-container">
+          <div class="relative ba b--gray grow pointer image-container br3 overflow-hidden">
             <img src="images/test.gif" class="thumb-image">
             <div class="bg-white absolute w-100 bottom-0  bt b--moon-gray pa1"><h4 class="tc pa3 ma0 f4-l f5">Interaction Development</h4></div>
           </div>
