--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pa2 relative">
-  <div class="mw9-l mw8-m center pl4-l pr4-l mt0-ns">
+  <div class="mw9-l mw8-m center pl4-l pr4-l mt0-ns mt2">
     <!-- originally mt5-ns -->
     <div class="center mw6-ns pa0-l pl5-m pr5-m pr5 pl5"><img src="images/logo-test.png" class="w-100"></div>
     <!-- <p class="f-headline-l f-inform-m f2 fw8 black tc ma0"><b>inform</b></p> -->
-    <p class="tc f1-l f2-m f3 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3">Scientific illustration and animation studio</p>
+    <p class="tc f2-l f3-m f4 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3">Scientific illustration and animation studio</p>
     <!-- <p class="tc mt5-ns mt5 f3-ns f4">We specialize in:</p> -->
     <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100 ma0">Under construction - check back soon for more details.</p></div> -->
     <div class="cf grid-l mw7 center pb3 pt3-ns">
