--- a/journal-covers.html
+++ b/journal-covers.html
@@ -16,11 +16,11 @@
   <header class="w-100 bb b--moon-gray">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
+  <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
   <div class="mw8 w-100 center pl2 pr2">
     <p class="tc f1-ns f2 pt4 mb3 dark-gray">Want to showcase your research?</p>
     <h1 class="tc f3-ns f4">We've got you covered.</h1>
-    <p class="f4-ns f5 mw6 center mt5 lh-copy">Not only will a custom cover illustration be great, but a nice illustration can also be used for posters, websites, promotional materials, talks, etc.</p>
+    <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p>
     <p class="tc f3-ns f4 mt5">How it works:</p>
     <div class="dt-ns w-100 mt4">
       <div class="w-50-ns dtc-ns v-mid">
