modified colors on journal page

--- a/data-visualization.html
+++ b/data-visualization.html
@@ -9,13 +9,11 @@
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
   <header class="w-100 bb b--moon-gray">
-    <a href="index.html" class="no-underline black-70"><p class="tl f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
+    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
   <div class="mw8 w-100 center pl2 pr2">
     <p class="tc f2-ns f3 pt4 mb3 dark-gray">Data Visualization</p>
-    <h1 class="tc f3-ns f4">Some other text here</h1>
-    <p class="f4-ns f5 mw6 center mt5 lh-copy">This is where a brief description will go, describing the services offered and giving examples of past work.</p>
+    <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
   </div>
   <div>
     <div class="bt b--moon-gray mt6-ns mt5 center">
