--- a/journal-covers.html
+++ b/journal-covers.html
@@ -17,7 +17,7 @@
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
   <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
-  <section class="bg-light-yellow bt b--moon-gray w-100 mt0 pb5">
+  <section class="bg-lightest-blue bt b--moon-gray w-100 mt0 pb5">
     <div class="mw8 w-100 center pl2 pr2">
       <p class="tc f1-ns f2 pt4 mb3 dark-gray">Want to showcase your research?</p>
       <h1 class="tc f3-ns f4">We've got you covered.</h1>
@@ -81,7 +81,7 @@
       </div>
     </div>
   </div>
-  <div class="w-100 bt b--moon-gray bw1 bg-light-gray pb6-ns pb5 mt5">
+  <div class="w-100 bt b--moon-gray bw1 bg-lightest-blue pb6-ns pb5 mt5">
     <div class="mw8 w-100 center">
       <p class="tc mt6-ns mt5 mb0 f2-ns f3 dark-gray">Ready to get started?</p>
       <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Contact us<span><img src="mail.svg" class="w2 ml1"></span></a> for a consultation.</p>
