slight text adjustment

--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -52,7 +52,7 @@
   </section>
   <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative">
     <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 relative z-1">
-      <p class="f4-ns f5 mw6 center mt5 lh-copy">Accuracy isn't sufficient—an illustration should be attractive as well! A colorful, compelling artwork inspires the imagination and leaves the viewer curious for more.</p>
+      <p class="f4-ns f5 mw6 center mt5 lh-copy">However, accuracy isn't sufficient—an illustration should be attractive as well! A colorful, compelling artwork inspires the imagination and leaves the viewer curious to learn more.</p>
       <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Recent work</p>
       <div class="w-100 dt-ns">
         <div class="w-third-ns pa3-l pa2 dtc-ns">
