additions to animation page

--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -25,7 +25,7 @@
       <div class="dt-ns w-100">
         <div class="w-40-ns dtc-ns v-mid">
           <div class="tl">
-            <p class="w-100 fr-ns tc-l tc f3-l f4-m f4 lh-copy light-gray db-ns dn">Accurate depictions...</p>
+            <p class="w-100 fr-ns tc-l tc f3-l f4-m f4 lh-copy light-gray db-ns dn">Accurate depictions<span class="f6">...</span></p>
           </div>
         </div>
         <div class="w-60-ns w-100 dtc-ns v-mid"><img src="images/illustration/quantum_dot.jpg"></div>
@@ -44,7 +44,7 @@
         <div class="w-60-ns w-100 dtc-ns v-mid"><img src="images/illustration/emsquid.jpg"></div>
         <div class="w-40-ns dtc-ns v-mid">
           <div class="tl">
-            <p class="w-100 fr-ns tc-l tc f3-l f4-m f4 lh-copy light-gray db-ns dn">...of complex phenomena.</p>
+            <p class="w-100 fr-ns tc-l tc f3-l f4-m f4 lh-copy light-gray db-ns dn"><span class="f6">...</span>of complex phenomena.</p>
           </div>
         </div>
       </div>
@@ -52,8 +52,8 @@
   </section>
   <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative">
     <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 relative z-1">
-      <p class="f4-ns f5 mw6 center mt5 lh-copy">However, accuracy isn't sufficient—an illustration should be attractive as well! A colorful, compelling artwork inspires the imagination and leaves the viewer curious to learn more.</p>
-      <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Recent work</p>
+      <p class="f4-ns f5 mw6 center mt5 lh-copy">However, accuracy isn't sufficient—an illustration should be attractive as well! Captivating artwork inspires the imagination and leaves the viewer curious to learn more.</p>
+      <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Recent work:</p>
       <div class="w-100 dt-ns">
         <div class="w-third-ns pa3-l pa2 dtc-ns">
           <div class="pa1 pb0 bg-white shadow-3">
@@ -83,7 +83,7 @@
   <section class="w-100 bg-light-gray bt b--light-gray pb6-ns pb5">
     <div class="mw8 w-100 center">
       <p class="tc mb0 f2-ns f3 dark-gray">Want to collaborate?</p>
-      <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Drop us a line<span><img src="mail.svg" class="w2 ml1"></span></a> and let's discuss your project.</p>
+      <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a> and let's discuss your project.</p>
     </div>
   </section>
   <footer>
