--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -11,12 +11,69 @@
   <header class="w-100">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <section class="bg-lightest-blue bt b--moon-gray w-100 mt0 pb5">
+  <section class="bt b--moon-gray w-100 mt0 pb5">
     <div class="mw8 w-100 center pl2 pr2">
-      <p class="tc f1-ns f2 pt4 mb3 dark-gray">If a picture is worth a thousand words...</p>
-      <h1 class="tc f3-ns f4">...an animation may save a few more.</h1>
+      <p class="tc f1-ns f2 pt4 mb3 dark-gray">If a picture is worth a thousand words<span class="f3">...</span></p>
+      <h1 class="tc f3-ns f4"><span class="f5">...</span>an animation may save a few more.</h1>
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
-      <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
+      <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
+      <div class="w-100 mw7 center tc mt5">
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/144085641?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      </div>
+      <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
+    </div>
+  </section>
+  <section class="bt b--moon-gray bw1 bg-lightest-blue w-100 mt0 pb5 relative">
+    <div class="mw8 w-100 center pa2">
+      <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Sometimes words fall short.</p>
+      <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to explain how something looks with words—especially when dealing with a complex process or unfamiliar phenomenon.</p>
+      <div class="w-100 dt-l mt5">
+        <div class="w-40-l w-100 dtc-l v-mid lh-copy ma4 pa4 pt2 pb2 ma0-l mt0-l mw6 center ba b--moon-gray bg-light-gray shadow-3 bg-white"><h4 class="tc">Drumhead modes</h4><p><span class="b">"</span>A two-dimensional elastic membrane under tension can support transverse vibrations. The properties of an idealized drumhead can be modeled by the vibrations of a circular membrane of uniform thickness, attached to a rigid frame. Due to the phenomenon of resonance, at certain vibration frequencies, its resonant frequencies, the membrane can store vibrational energy, the surface moving in a characteristic pattern of standing waves. This is called a normal mode. A membrane has an infinite number of these normal modes, starting with a lowest frequency one called the fundamental mode.<span class="b">"</span></p>
+          <p class="tr pr4 f7">Source: <a href="https://en.wikipedia.org/wiki/Vibrations_of_a_circular_membrane" target="_blank">Wikipedia</a></p>
+        </div>
+        <div class="w-20-l w-100 dtc-l center mw6 v-mid tc mb0"><h1 class="mt0">versus</h1></div>
+        <div class="w-40-l w-100 dtc-l v-mid pa4 pa0-l pt2 center mw6"><img src="images/mode_2-small.gif" class="center ba b--moon-gray bg-light-gray shadow-3 bg-white"></div>
+      </div>
+      <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
+  </section>
+  <section class="bg-white bt b--moon-gray bw1 w-100 mt0 pb5 relative">
+    <div class="mw8 w-100 center pa2">
+    <p class="f2-ns f3 mw7 center tc mt5 lh-copy mb3">A simple animation can make all the difference.</p>
+    <p class="f4-ns f5 mw6 center mt4 lh-copy">An appropriate animation can fill conceptual gaps, supporting a description by providing hard-to-visualize details.</p>
+    <div class="w-100 dt-l mt5">
+      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l">
+        <p class="f3-l f4 tc center lh-copy mb3">From short cartoons, for an article or presentation<span class="f6">...</span></p>
+      </div>
+      <div class="w-50-l w-100 dtc-l pa4 ba b--moon-gray shadow-3 mw6 center"><img src="images/moebius-hires.gif" class="center"></div>
+    </div>
+    <div class="w-100 dt-l mt5">
+      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l">
+        <p class="f3-l f4 tc center lh-copy mb3"><span class="f6">...</span>to in-depth explanatory videos<span class="f6">...</span></p>
+      </div>
+      <div class="w-50-l w-100 dtc-l pa3 ba b--moon-gray shadow-3 mw6 center" style="background-color: #f5f5f5"><img src="images/in-depth-animation.gif" class="center"></div>
+    </div>
+    <div class="w-100 dt-l mt5">
+      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l">
+        <p class="f3-l f4 tc center lh-copy mb3"><span class="f6">...</span>we'll bring your vision to life!</p>
+      </div>
+      <div class="w-50-l w-100 dtc-l ba b--moon-gray shadow-3 mw6 center" style="background-color: #191d20"><img src="images/bring-to-life.gif" class="center"></div>
+    </div>
+  </section>
+  <section class="bg-white bt b--white w-100 mt0 pb5 relative">
+    <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 relative z-1">
+      <p class="f2-ns f3 mw6 center tc mt0 lh-copy mt4">Recent work:</p>
+      <div class="w-100 mw7 center tc ba b--moon-gray shadow-3">
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/Wv-hoCenJx4" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      </div>
+      <p class="f6 tc b mb1">Building a quantum computer with atomic ions</p>
+      <p class="f7 tc mt0">Client: Joint Quantum Institute</p>
+    </div>
+    <div class=" absolute h-50 bg-light-gray w-100 center bottom-0 bt b--moon-gray bw1"></div>
+  </section>
+  <section class="w-100 bg-light-gray bt b--light-gray pb6-ns pb5">
+    <div class="mw8 w-100 center">
+      <p class="tc mb0 f2-ns f3 dark-gray mt4">Have a project in mind?</p>
+      <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Let us know<span><img src="mail.svg" class="w2 ml1"></span></a> and we'll get to work.</p>
     </div>
   </section>
   <footer>
