additions to animation page

--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -24,7 +24,7 @@
     </div>
   </section>
   <section class="bt b--moon-gray bw1 bg-lightest-blue w-100 mt0 pb5 relative">
-    <div class="mw8 w-100 center pa2">
+    <div class="mw8 w-100 center pa2 pr4-l pl4-l">
       <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Sometimes words fall short.</p>
       <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to explain how something looks with words—especially when dealing with a complex process or unfamiliar phenomenon.</p>
       <div class="w-100 dt-l mt5">
@@ -37,26 +37,26 @@
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
   </section>
   <section class="bg-white bt b--moon-gray bw1 w-100 mt0 pb5 relative">
-    <div class="mw8 w-100 center pa2">
+    <div class="mw8 w-100 center pr4-l pl4-l pa2">
     <p class="f2-ns f3 mw7 center tc mt5 lh-copy mb3">A simple animation can make all the difference.</p>
     <p class="f4-ns f5 mw6 center mt4 lh-copy">An appropriate animation can fill conceptual gaps, supporting a description by providing hard-to-visualize details.</p>
     <div class="w-100 dt-l mt5">
-      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l">
-        <p class="f3-l f4 tc center lh-copy mb3">From short cartoons, for an article or presentation<span class="f6">...</span></p>
+      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
+        <p class="f3-l f4 tl-l tc center lh-copy mb3">From short cartoons, for an article or presentation<span class="f6">...</span></p>
       </div>
-      <div class="w-50-l w-100 dtc-l pa4 ba b--moon-gray shadow-3 mw6 center"><img src="images/moebius-hires.gif" class="center"></div>
+      <div class="w-50-l w-100 dtc-l pa4 ba b--moon-gray shadow-3 mw6 center mr4-l"><img src="images/moebius-hires.gif" class="center"></div>
     </div>
     <div class="w-100 dt-l mt5">
-      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l">
-        <p class="f3-l f4 tc center lh-copy mb3"><span class="f6">...</span>to in-depth explanatory videos<span class="f6">...</span></p>
+      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
+        <p class="f3-l f4 tl-l tc center lh-copy mb3"><span class="f6">...</span>to in-depth explanatory videos<span class="f6">...</span></p>
       </div>
-      <div class="w-50-l w-100 dtc-l pa3 ba b--moon-gray shadow-3 mw6 center" style="background-color: #f5f5f5"><img src="images/in-depth-animation.gif" class="center"></div>
+      <div class="w-50-l w-100 dtc-l pa3 ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #f5f5f5"><img src="images/in-depth-animation.gif" class="center"></div>
     </div>
     <div class="w-100 dt-l mt5">
-      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l">
-        <p class="f3-l f4 tc center lh-copy mb3"><span class="f6">...</span>we'll bring your vision to life!</p>
+      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
+        <p class="f3-l f4 tl-l tc center lh-copy mb3"><span class="f6">...</span>we'll bring your vision to life!</p>
       </div>
-      <div class="w-50-l w-100 dtc-l ba b--moon-gray shadow-3 mw6 center" style="background-color: #191d20"><img src="images/bring-to-life.gif" class="center"></div>
+      <div class="w-50-l w-100 dtc-l ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #191d20"><img src="images/bring-to-life.gif" class="center"></div>
     </div>
   </section>
   <section class="bg-white bt b--white w-100 mt0 pb5 relative">
