fixed blur issues in chrome
switched to using unminified css and removed backface-visibility properties from the .grow class

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="tachyons.min.css">
+  <link rel="stylesheet" href="tachyons.css">
   <style>
     .mw-image {
       max-width: 34rem;
@@ -75,7 +75,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
         <a href="explanatory-animation.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/moebius.gif" class="thumb-image">
