--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="tachyons.min.css">
+  <link rel="stylesheet" href="tachyons.css">
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
   <header class="w-100">
@@ -26,7 +26,7 @@
   <section class="bt b--moon-gray bw1 bg-lightest-blue w-100 mt0 pb5 relative">
     <div class="mw8 w-100 center pa2 pr4-l pl4-l">
       <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Sometimes words fall short.</p>
-      <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to explain how something looks with words—especially when dealing with a complex process or unfamiliar phenomenon.</p>
+      <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to describe how something looks—especially when dealing with a complex process or unfamiliar phenomenon.</p>
       <div class="w-100 dt-l mt5">
         <div class="w-40-l w-100 dtc-l v-mid lh-copy ma4 pa4 pt2 pb2 ma0-l mt0-l mw6 center ba b--moon-gray bg-light-gray shadow-3 bg-white"><h4 class="tc">Drumhead modes</h4><p><span class="b">"</span>A two-dimensional elastic membrane under tension can support transverse vibrations. The properties of an idealized drumhead can be modeled by the vibrations of a circular membrane of uniform thickness, attached to a rigid frame. Due to the phenomenon of resonance, at certain vibration frequencies, its resonant frequencies, the membrane can store vibrational energy, the surface moving in a characteristic pattern of standing waves. This is called a normal mode. A membrane has an infinite number of these normal modes, starting with a lowest frequency one called the fundamental mode.<span class="b">"</span></p>
           <p class="tr pr4 f7">Source: <a href="https://en.wikipedia.org/wiki/Vibrations_of_a_circular_membrane" target="_blank">Wikipedia</a></p>
@@ -78,7 +78,7 @@
   </section>
   <footer>
     <div class="bt b--moon-gray center">
-      <p class="tc f7 gray mt2 mb1">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
     </div>
   </footer>
 </body>
