--- a/journal-covers.html
+++ b/journal-covers.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="tachyons.min.css">
+  <link rel="stylesheet" href="tachyons.css">
   <style>
     .permissions {
       margin-top: -0.3rem;
