--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -5,7 +5,7 @@
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="tachyons.min.css">
+  <link rel="stylesheet" href="tachyons.css">
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
   <header class="w-100">
